feat: DOM Manipulation

--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
         <input type="submit" value="Submit">
     </form>  -->
     
-    <div class = "outer">
+    <!-- <div class = "outer">
         <div class="container">
             <button> Submit </button> 
         </div>
-    </div>
+    </div> -->
 
-    <script src="./script.js"></script>  <!-- ./ for current directory and ../ for older directory 
+    <input type="name" id="name" placeholder ="Enter student name">
+    <button class="btn">Add Students</button>
+    <div class="list"></div>
+
+    <script src="./script.js"></script>  <!-- ./ for current directory and ../ for older directory -->
      
 
 </body>
